Basic CRUD finished
