# service/USERSService.js
@@ -1,3 +1,8 @@
+import db from '../models';
+import { respondWithCode } from '../utils/writer'
+import { v4 as uuidv4 } from 'uuid';
+
+
 /**
  * Create user
  * Create an user.
@@ -6,8 +11,33 @@
  * no response value expected for this operation
  **/
 export const createUser = function(body) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+  return new Promise(async function(resolve, reject){
+    let secureBody = {
+      id: uuidv4(),
+      name: body.name,
+      dob: new Date(body.dob).toJSON(),
+      address: {
+        zipCode: body.address.zipCode ? body.address.zipCode : "",
+        street: body.address.street ? body.address.street : "",
+        number: body.address.number ? body.address.number : "",
+        complement: body.address.complement ? body.address.complement : "",
+        district: body.address.district ? body.address.district : "",
+        city: body.address.city ? body.address.city : "",
+        state: body.address.state ? body.address.state : "",
+        country: body.address.country ? body.address.country : "",
+      },
+      description: body.description,
+    }
+    await db.user.create(secureBody).
+    then((result) => {
+      if(result)
+        resolve(respondWithCode(200, { statusCode: 200, result}));
+      else
+        reject(respondWithCode(404, { statusCode: 404, message: "User not created"}))
+    }).
+    catch((error) => {
+      reject(respondWithCode(500,{message: "Internal server error", error}));
+    });
   });
 }
 
@@ -19,9 +49,21 @@ export const createUser = function(body) {
  * userId UUID 
  * no response value expected for this operation
  **/
-export const deleteUser = function(userId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+export const deleteUserById = function(userId) {
+  return new Promise(async function(resolve, reject) {
+    await db.user.destroy({
+      where: {
+        id: userId
+      }
+    }).then((result) => {
+      if(result)
+        resolve(respondWithCode(200, {statusCode: 200, message: "User deleted"}));
+      else
+        reject(respondWithCode(404, {statusCode: 404, message: "Not found user"}))
+    }).catch((error) => {
+      console.log(error)
+      reject(respondWithCode(500, {statusCode: 500, message: "Internal server error"}));
+    });
   });
 }
 
@@ -34,8 +76,20 @@ export const deleteUser = function(userId) {
  * returns response_200_user
  **/
 export const readUserById = function(userId) {
-  return new Promise(function(resolve, reject) {
-    resolve()
+  return new Promise(async function(resolve, reject) {
+    await db.user.findOne({
+      where: {
+        id: userId
+      }
+    }).then((result) => {
+      if(result)
+        resolve(respondWithCode(200, {statusCode: 200, user: result}));
+      else
+        reject(respondWithCode(404, {statusCode: 404, message: "Not found user"}))
+    }).catch((error) => {
+      console.log(error)
+      reject(respondWithCode(500, {statusCode: 500, message: "Internal server error"}));
+    });
   });
 }
 
@@ -47,8 +101,22 @@ export const readUserById = function(userId) {
  * returns response_200_users
  **/
 export const readUsers = function() {
-  return new Promise(function(resolve, reject) {
-    resolve()
+  return new Promise(async function(resolve, reject) {
+    await db.user.findAll({
+      where: {}
+    })
+    .then((result) => {
+      if(result){
+        resolve(respondWithCode(200, {statusCode:200, users: result}));
+      }
+      else{
+        payload['clients'] = []
+        reject(respondWithCode(404, {statusCode:404, message:"Not found user"}));
+      }
+    }).catch((error) => {
+      console.log(error)
+      reject(respondWithCode(500, {statusCode:500, message: "Internal server error"}));
+    });
   });
 }
 
@@ -61,9 +129,23 @@ export const readUsers = function() {
  * userId UUID 
  * no response value expected for this operation
  **/
-export const updateUser = function(body,userId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
+export const updateUserById = function(body,userId) {
+  return new Promise(async function(resolve, reject) {
+    await db.user.update(body,{
+      where: {
+        id: userId
+      }
+    }).
+    then((result) => {
+      if(result[0])
+        resolve(respondWithCode(200, {message:"User updated"}));
+      else
+        reject(respondWithCode(404, {message:"Not found user"}))
+    }).
+    catch((error) => {
+      console.log(error)
+      reject(respondWithCode(500, {message: "Internal server error"}));
+    });
   });
 }
 
